<resources>
    <string name="app_name">skunkworks-crow</string>
    <string name="hotspot_running">Running Hotspot</string>
    <string name="hotspot_start">Starting hotspot</string>
    <string name="stop">Stop</string>
    <string name="hotspot_settings_dialog">Enable portable hotspot from the settings.</string>
    <string name="hotspot_name_suffix">-odk-skunkworks</string>
    <string name="hotspot_name_prefix_oreo">AndroidShare</string>
    <string name="hotspot_already_running">Hotspot already running</string>
    <string name="scan_alert_oreo">Scan QR Code to connect to this network</string>
    <string name="saved_forms">Saved Forms</string>
    <string name="send_selected">Send</string>
    <string name="select_all">Select all</string>
    <string name="clear_all">Clear all</string>
    <string name="send_count">Send (%d)</string>
    <string name="send_forms">Send</string>
    <string name="version">Version: %1$s</string>
    <string name="id">ID: %1s</string>
    <string name="connect_wifi">Connect to wifi</string>
    <string name="receive_forms">Receive</string>
    <string name="enable_wifi">Enable Wifi to start scan</string>
    <string name="no_wifi_available">No wifi available. Scan again !</string>
    <string name="scanning">Scanning. Please wait</string>
    <string name="scan">Scan wifi</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="show_password">Show Password</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="password_empty">Password field is empty</string>
    <string name="port_empty">Port cannot be empty</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="user_guide">User Guide</string>
    <string name="default_hotspot_ssid">hotspot</string>
    <string name="default_hotspot_password">12345678</string>
    <string name="title_bluetooth_name">Bluetooth Name</string>
    <string name="title_hotspot_ssid">Hotspot SSID</string>
    <string name="title_hotspot_password">Set Hotspot password</string>
    <string name="summary_security_bluetooth">Use secure transfer (needs pairing code, controlled by receiver)</string>
    <string name="set_password">Set Password</string>
    <string name="secure_mode">Enable Secure Mode</string>
    <string name="password_hotspot">Password required to connect with hotspot</string>
    <string name="hotspot_name_error">Hotspot name should not be empty</string>
    <string name="bluetooth_name_error">Bluetooth name should not be empty</string>
    <string name="hotspot_password_error">Password length should be atleast 8 characters long</string>
    <string name="waiting_connection">Waiting for connection to accept</string>
    <string name="waiting_hotspot">Waiting for hotspot to connect</string>
    <string name="connection_issue_hotspot">Problem in enabling hotspot. Try again</string>
    <string name="connection_info">For connection, scan this QR code or type %1$s after connecting to WiFi %2$s</string>
    <string name="connecting_wifi">Connecting to wifi</string>
    <string name="ok">OK</string>
    <string name="canceled">Canceled</string>
    <string name="stop_sending">Stop Sending</string>
    <string name="stop_sending_msg">Do you want to stop sending?</string>
    <string name="disable_bluetooth">Disable bluetooth</string>
    <string name="disable_bluetooth_receiver_msg">Do you want to disable the bluetooth and stop receiving of forms?</string>
    <string name="disable_bluetooth_sender_msg">Do you want to disable the bluetooth and quit?</string>
    <string name="sending_items">Sending %1$s of %2$s form(s)</string>
    <string name="receiving_items">Receiving %1$s of %2$s form(s)</string>
    <string name="transfer_result">Transfer result</string>
    <string name="error_while_downloading">Error occurred while downloading form: %1$s</string>
    <string name="error_while_uploading">Error occurred while uploading form: %1$s</string>
    <string name="download_queued">Downloading queued…</string>
    <string name="upload_queued">Uploading queued…</string>
    <string name="cannot_create_directory">Cannot create directory: %s</string>
    <string name="not_a_directory">%s exists, but is not a directory</string>
    <string name="sdcard_unmounted">Collect cannot access the SD card. Perhaps it is mounted via USB? (Current state: %s)</string>
    <string name="statistics">Statistics</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="reviewed">Reviewed</string>
    <string name="no_forms_sent">No filled %s forms sent</string>
    <string name="no_forms_received">No filled %s forms received</string>
    <string name="no_forms_reviewed">No finalized %s forms reviewed</string>
    <string name="sort_list">Sort the list</string>
    <string name="search_list">Search the list</string>
    <string name="switch_list">Switch the transfer method</string>
    <string name="search">Search</string>
    <string name="review_form">Review Form</string>
    <string name="sort_by_name_asc">Name, A-Z</string>
    <string name="sort_by_name_desc">Name, Z-A</string>
    <string name="sort_by_date_asc">Date, newest first</string>
    <string name="sort_by_date_desc">Date, oldest first</string>
    <string name="sort_by">Sort by</string>
    <string name="approve">Approve</string>
    <string name="Reject">Reject</string>
    <string name="review_later">Review Later</string>
    <string name="add_feedback">Add Feeback</string>
    <string name="view_form_in_collect">View in ODK Collect</string>
    <string name="collect_not_installed">Install ODK Collect to view the form</string>
    <string name="install_collect">skunkworks-crow app requires ODK Collect to be installed in the device</string>
    <string name="install">Install</string>
    <string name="no_blank_forms">No blank forms available</string>
    <string name="form_approved">Form approved</string>
    <string name="form_rejected">Form rejected</string>
    <string name="approved_on">Approved on %s</string>
    <string name="rejected_on">Rejected on %s</string>
    <string name="received_on">Unreviewed, Received on %s</string>
    <string name="sent_on">Sent on %s</string>
    <string name="date_at_time">EEE, MMM dd, yyyy \'at\' HH:mm</string>
    <string name="form_name">Name: %s </string>
    <string name="form_transfer_result">Result: %s </string>
    <string name="blank_form_count">Blank form %s \n</string>
    <string name="success">Success %s</string>
    <string name="failed">Failed %s</string>
    <string name="review_not_asked">Review not asked by the receiver \n</string>
    <string name="not_sent_for_review">Form not sent for review \n</string>
    <string name="review_sent">Review sent \n</string>
    <string name="review_received">Review received \n</string>
    <string name="sent_for_review">Sent for review \n</string>
    <string name="received_for_review">Received for review \n</string>
    <string name="updated">Updated \n</string>
    <string name="sent_again">Sent again \n</string>
    <string name="msg_form_already_exist">Already exists \n</string>
    <string name="form_received_by_reviewer">%s by reviewer</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="feedback_sent">\nFeedback sent by reviewer: %s</string>
    <string name="no_feedback_sent">\nNo feedback sent by the reviewer</string>
    <string-array name="stats_field">
        <item name="sent">Sent</item>
        <item name="received">Received</item>
        <item name="reviewed">Reviewed</item>
    </string-array>
    <string name="filled_form">Filled forms</string>
    <string name="blank_form">Blank Forms</string>
    <string name="num_reviewed">Reviewed: %s</string>
    <string name="num_unreviewed">Unreviewed: %s</string>
    <string name="no_forms">No Forms Found</string>
    <string name="default_odk_destination_dir">\/sdcard\/odk</string>
    <string name="title_odk_destination_dir">ODK Destination Directory</string>
    <string name="odk_destination_dir_error">The destination should not be empty</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="location_settings_dialog">Enable location from the settings.</string>
    <string name="title_reset_settings">Reset Application</string>
    <string name="reset_database">Reset Saved Forms</string>
    <string name="reset_database_msg">reset forms sent for review and forms received for review.</string>
    <string name="reset_pref">Reset All Settings</string>
    <string name="reset_pref_msg">reset internal settings and saved settings.</string>
    <string name="reset_select_nothing">Please select items to reset</string>
    <string name="resetting">Resetting</string>
    <string name="resetting_msg">Resetting application, please wait&#8230;</string>
    <string name="reset_result">Reset Results</string>
    <string name="reset_result_pref">All Settings: %s</string>
    <string name="reset_result_data">Saved Forms: %s \n</string>
    <string name="reset_success">Success</string>
    <string name="reset_failed">Failed</string>
    <string name="switch_method">Switch</string>
    <string name="btn_refresh">Refresh</string>
    <string name="connect_bluetooth_title">Device to Receive</string>
    <string name="connected_bluetooth_downloading">Connected, start downloading&#8230;</string>
    <string name="connecting_title">Connecting</string>
    <string name="scanning_title">Scanning</string>
    <string name="bluetooth">bluetooth</string>
    <string name="scanning_msg">Scanning bluetooth devices, please wait&#8230;</string>
    <string name="bluetooth_paired">device paired</string>
    <string name="bluetooth_unpaired">device unpaired</string>
    <string name="bluetooth_send_time_up">You have not connected a device for more than 60 seconds, the device is not discoverable. If you want to continue, please restart the sending page.</string>
    <string name="timeout">Timeout</string>
    <string name="receiving_title">Receiving</string>
    <string name="sending_title">Sending</string>
    <string name="connecting_message">connecting to bluetooth \n please wait&#8230;</string>
    <string name="connecting_transfer_message">connected with bluetooth receiver! \nstarting transferring&#8230;</string>
    <string name="turning_on_bluetooth_message">you have disabled bluetooth, turning on now&#8230;</string>
    <string name="send_instance_title">Send Data</string>
    <string name="bluetooth_instance_name_default">Bluetooth Device</string>
    <string name="tv_sender_wait_for_connect">waiting for connection (%ss left)&#8230; \nwill start transfer when connected </string>
    <string name="dev_already_connected">already connected to the device, start transferring now&#8230;</string>
    <string name="bluetooth_no_device_scanned">No devices are available. \n Tap refresh to search again.</string>
    <string name="preference_default_method">Default Transfer Method</string>
    <string name="preference_default_method_summary">Bluetooth</string>
    <string name="bluetooth_switch_method">Are you sure to stop and switch to bluetooth method?</string>
    <string name="hotspot_switch_method">Are you sure to stop and switch to hotspot method?</string>
    <string name="switch_to_bluetooth_title">Switch to Bluetooth Method</string>
    <string name="switch_to_hotspot_title">Switch to Hotspot Method</string>
    <string name="permission_location_denied">Location permission is required to send the forms using Bluetooth. Please allow it in the app settings.</string>
    <string name="permission_storage_denied">Storage permission is required. Please allow it in the app settings.</string>
</resources>