<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Hotspot Settings">

        <EditTextPreference
            android:defaultValue="@string/default_hotspot_ssid"
            android:summary="@string/default_hotspot_ssid"
            android:title="@string/title_hotspot_ssid"
            android:key="hotspot_name"/>

        <EditTextPreference
            android:defaultValue="@string/default_hotspot_password"
            android:summary="********"
            android:title="@string/title_hotspot_password"
            android:key="hotspot_password"
            android:enabled="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hotspot_pwd_require"
            android:summary="@string/password_hotspot"
            android:title="@string/set_password" />

    </PreferenceCategory>
</PreferenceScreen>