<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mMatchParent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <ScrollView
        style="@style/mMatchParent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            style="@style/mMatchParentWidth"
            android:orientation="vertical"
            android:padding="10dp">

            <View
                style="@style/mMatchParentWidth"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/description"
                style="@style/mWrapContent"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_feedback"
                style="@style/mMatchParentWidth">

                <EditText
                    android:id="@+id/save_feedback"
                    style="@style/mMatchParentWidth"
                    android:hint="@string/add_feedback"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="@style/mMatchParentWidth"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/bApprove"
                    style="@style/mMatchParentWidth"
                    android:layout_weight="1"
                    android:text="@string/approve" />

                <Button
                    android:id="@+id/bReject"
                    style="@style/mMatchParentWidth"
                    android:layout_weight="1"
                    android:text="@string/Reject" />

            </LinearLayout>

            <Button
                android:id="@+id/bViewAgain"
                style="@style/mMatchParentWidth"
                android:layout_gravity="center_horizontal"
                android:text="@string/view_form_in_collect" />

            <Button
                android:id="@+id/bReviewLater"
                style="@style/mMatchParentWidth"
                android:text="@string/review_later" />

            <View
                style="@style/mMatchParentWidth"
                android:layout_weight="1.0" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>