<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mMatchParent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        style="@style/mMatchParent"
        android:layout_above="@+id/buttonholder"
        android:layout_below="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            style="@style/mMatchParent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_view"
            style="@style/mWrapContent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no_wifi_available"
            android:textSize="22sp" />

        <ProgressBar
            android:id="@+id/wifi_progress_bar"
            style="@style/mWrapContent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonholder"
        style="@style/mMatchParentWidth"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bScan"
            style="@style/mMatchParentWidth"
            android:layout_weight="1"
            android:text="@string/scan" />

        <Button
            android:id="@+id/bScanQRCode"
            style="@style/mMatchParentWidth"
            android:layout_weight="1"
            android:text="@string/scan_qr_code" />
    </LinearLayout>
</RelativeLayout>